[package]
edition = "2021"
name = "slint-rust-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
device_query = "3.0.1"
serde = {version = "1.0.212", features = ["derive"]}
serde_json = "1.0.100"
slint = "1.8.0"
[build-dependencies]
slint-build = "1.8.0"
